@@ -83,10 +83,11 @@ DEVICESCAN
 #/dev/twa0 -d 3ware,1 -a -s L/../../2/03
 
 # Monitor 2 SATA (not SAS) disks connected to a 3ware 9000 controller which
-# uses the 3w-sas driver (Linux, FreeBSD). Start long self-tests Tuesdays
+# uses the 3w-sas driver (Linux). Start long self-tests Tuesdays
 # between 1-2 and 3-4 am.
+# On FreeBSD /dev/tws0 should be used instead
 #/dev/twl0 -d 3ware,0 -a -s L/../../2/01
-#/dev/twa0 -d 3ware,1 -a -s L/../../2/03
+#/dev/twl0 -d 3ware,1 -a -s L/../../2/03
 
 # Same as above for Windows. Option '-d 3ware,N' is not necessary,
 # disk (port) number is specified in device name.
